<resources>
    <string name="app_name" translatable="false">helpi</string>
    <string name="welcome_message">Welcome to helpi!</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="social_login">-----------------------Social Login-----------------------</string>
    <string name="navigation">Navigation</string>
    <string name="search">Search</string>
    <string name="add_post">Post</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="Settings">Settings</string>
    <string name="My_User">My User</string>
    <string name="Report_a_problem">Report a problem</string>
    <string name="Contact_Us">Contact Us</string>
    <string name="My_Chats">My Chats</string>
    <string name="email">Email</string>
    <string name="choose_profile_picture">Choose Profile Picture</string>
    <string name="password">Password\n</string>
    <string name="social_register">-----------------Social Register-----------------</string>
    <string name="select_category">Select Category</string>
    <string name="report">report</string>
    <string name="allFieldsRequired">All fields are required</string>
    <string name="imgTooLarge">Image is too large</string>
    <string name="uploadingPost">Uploading Post</string>
    <string name="postedSuccessfully">Post uploaded successfully</string>
    <string name="errorPosting">Post upload failed</string>
    <string name="dont_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="now">now!</string>
    <string name="or">OR </string>
    <string name="or_login_with">OR login with</string>
    <string name="product">Product</string>
    <string name="service">Service</string>
    <string name="otherLocationOption">Other</string>
    <string name="select_subcategory">Select a subcategory</string>
    <string name="no_image_provided">No image provided</string>
    <string name="phone">Phone</string>
    <string name="select_location">Select Location</string>
    <string name="city_not_found">City not found</string>
    <string name="find_evrthng">Find everything</string>
    <string name="recent_products">Recent Products</string>
    <string name="recent_services">Recent Services</string>


    <string-array name="categories">
        <item>Select Category</item>
        <item>Electronics</item>
        <item>Clothing</item>
        <item>Books</item>
        <item>Furniture</item>
        <item>Toys</item>
        <item>Other</item>
    </string-array>
    <string-array name="electronics_subcategories">
        <item>Select Sub Category</item>
        <item>Phones</item>
        <item>Laptops</item>
        <item>Tablets</item>
        <item>Headphones</item>
        <item>Speakers</item>
        <item>Other</item>
    </string-array>
    <string-array name="type">
        <item>Select Post Type</item>
        <item>@string/product</item>
        <item>@string/service</item>
    </string-array>
    <string-array name="product_condition">
        <item>Select Product Status</item>
        <item>New</item>
        <item>Used</item>
    </string-array>
    <string-array name="fashion_subcategories">
        <item>Select Sub Category</item>
        <item>Suits</item>
        <item>Shirts</item>
        <item>Shoes</item>
    </string-array>
    <string-array name="home_subcategories">
        <item>Select Sub Category</item>
        <item>Sofa</item>
        <item>Table</item>
        <item>Chair</item>
    </string-array>

    <string-array name="toys_subcategories">
        <item>Select Sub Category</item>
        <item>Board Games</item>
        <item>Outdoor Games</item>
        <item>Indoor Games</item>
    </string-array>
    <string-array name="books_subcategories">
        <item>Select Sub Category</item>
        <item>Novel</item>
        <item>Textbook</item>
        <item>Magazine</item>
    </string-array>

    <string-array name="other_subcategories">
        <item>Other</item>
    </string-array>

    <string name="english">English</string>
    <string name="hebrew">Hebrew</string>
    <string name="profile">Profile</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="notifications">Notifications</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="share">Share</string>
    <string name="dash_board">Dash Board</string>
    <string name="reports">Reports:</string>
    <string name="posts_to_approve">Posts to Approve:</string>
    <string name="type_a_message">Type a message</string>
    <string name="send_message">Send message</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="upload_images">Upload Images</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="post_type">Post Type</string>
    <string name="select_product_status">Select Product Status</string>
    <string name="search_post">Search Post</string>
    <string name="select_region">Select Region</string>
    <string name="results_for_your_search">Results For Your Search:</string>
    <string name="enter_description">Enter description</string>
    <string name="submit_report">Submit Report</string>
    <string name="enter_your_notes">Enter your notes</string>
    <string name="reject_report">Reject Report</string>
    <string name="delete_post">Delete Post</string>
    <string name="location_not_found">Location not found</string>
    <string name="welcome_guest">\"Welcome, Guest\"</string>
    <string name="hi">hi</string>
    <string name="add_new_admin">Add new Admin</string>
    <string name="local_admin">Local Admin</string>
    <string name="global_admin">Global Admin</string>
    <string name="enter_the_email_address_of_the_user_you_want_to_promote">Enter the email address of the user you want to promote</string>
    <string name="ok">OK</string>
    <string name="category">Post Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="location">Post Location</string>
    <string name="condition">Condition</string>
    <string name="contact_person">Contact Person</string>
    <string name="user_created_successfully">User created successfully</string>
    <string name="failed_to_open_chat">Failed to open chat</string>
    <string name="admin_added_successfully">Admin added successfully</string>
    <string name="could_not_find_user_information">Could not find user information</string>
    <string name="authentication_failed">"Authentication failed - please try again"</string>
    <string name="user_signed_in_successfully">User signed in successfully</string>
    <string name="failed_to_sign_in_with_google">Failed to sign in with google</string>
    <string name="please_fill_all_the_fields">Please fill all the fields</string>
    <string name="cannot_chat_with_yourself">Cannot chat with yourself</string>
    <string name="google_sign_in_failed">Google sign-in failed</string>
    <string name="failed_to_resolve_report">Failed to resolve report</string>
    <string name="failed_to_reject_report">Failed to reject report</string>
    <string name="report_rejected">Report rejected</string>
    <string name="post_accepted">Post accepted</string>
    <string name="failed_to_accept_post_please_try_again_later">Failed to accept post, please try again later</string>
    <string name="post_rejected">Post rejected</string>
    <string name="failed_to_reject_post_please_try_again_later">Failed to reject post, please try again later</string>
    <string name="report_filed_successfully">Report filed successfully</string>
    <string name="failed_to_file_report_please_try_again_later">Failed to file report, please try again later</string>
    <string name="cropping_failed">"Cropping failed: "</string>
    <string name="report_resolved_post_deleted">Report resolved, Post deleted</string>
    <string name="phone_number">Phone number</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_profile_image">Change profile image</string>
    <string name="profile_image_description">"Profile Image "</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="profile_update_failed">Failed to update profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="reason_example">Report Reason:</string>
    <string name="description_example_details">"Report Description:  "</string>
    <string name="title_example_title">Post Title:</string>
    <string name="description_example_post_details">Post Details:</string>
    <string name="post_title">Post Title:</string>
    <string name="report_reason">Report Reason:</string>
    <string name="report_description">Report Description:</string>
    <string name="post_description">Post Description:</string>
    <string name="resolve_report">Resolve Report</string>
    <string name="off">Off</string>


    <string-array name="languages">
        <item>@string/english</item>
        <item>@string/hebrew</item>
    </string-array>
</resources>