<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/searchPostableFragment"
        android:icon="@drawable/taskbar_search_icon"
        android:title="@string/search"
        android:tooltipText="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/taskbar_home_icon"
        android:title="@string/home"
        android:tooltipText="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/offerPostFragment"
        android:icon="@drawable/taskbar_post_icon"
        android:title="@string/add_post"
        android:tooltipText="@string/add_post"
        app:showAsAction="always"
        android:orderInCategory="101" />
</menu>