<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Post Image -->
    <ImageView
        android:id="@+id/imageViewReportDialog"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="8dp" />

    <!-- Admin Notes -->
    <EditText
        android:id="@+id/etAdminNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_your_notes"
        android:textSize="16sp" />

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnRejectReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reject_report"
            android:textAllCaps="false"
            android:backgroundTint="@color/colorError"
            android:textColor="@android:color/white"
            android:paddingHorizontal="16dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnDeletePost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_post"
            android:textAllCaps="false"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:paddingHorizontal="16dp" />

    </LinearLayout>

</LinearLayout>