<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SearchPostableFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/search_post"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Category Selection -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/select_category"
        app:boxBackgroundColor="@color/lightGray"
        app:boxStrokeWidth="0dp"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <AutoCompleteTextView
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Subcategory Selection -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/subcategoryInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/select_subcategory"
        app:boxBackgroundColor="@color/lightGray"
        app:boxStrokeWidth="0dp"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoryInputLayout">

        <AutoCompleteTextView
            android:id="@+id/subcategorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="12dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Region Selection -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regionInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/select_region"
        app:boxBackgroundColor="@color/lightGray"
        app:boxStrokeWidth="0dp"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subcategoryInputLayout">

        <AutoCompleteTextView
            android:id="@+id/regionSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="12dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Product Status Selection -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/productStatusInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/select_product_status"
        app:boxBackgroundColor="@color/lightGray"
        app:boxStrokeWidth="0dp"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regionInputLayout">

        <AutoCompleteTextView
            android:id="@+id/productStatusSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="12dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Search Button -->
    <Button
        android:id="@+id/btnSearchProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productStatusInputLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>